--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ body{
 .list{
   display: flex;
   list-style: none;
-  margin-right: 30px;
+  /* margin-right: 30px; */
 }
 .listItem{
   padding: 20px;
@@ -24,7 +24,7 @@ body{
 .img{
   height: 100px;
   width: 100px;
-  margin-left: 30px;
+  margin-left: 50px;
 }
 .header{
   display: flex;
@@ -55,14 +55,14 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  
+  flex-wrap: wrap;
 }
 
 .exploreFoods img{
-  display: flex;
+  /* display: flex;
   justify-content: center;
-  align-items: center;
-  height: 300px;
+  align-items: center; */
+  height: 350px;
   width: 300px;
   margin: 30px;
   border: 1px solid transparent;
@@ -78,25 +78,25 @@ body{
 .row{
   display: flex;
   justify-content: center;
-  flex-direction: row;
+  /* flex-direction: row; */
 }
 .footer{
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 80px;
+  height: 90px;
 }
 @media (max-width:500px) {
   .img{
       display: none;
   }
 }
-@media (max-width:800px){
+/* @media (max-width:800px){
   .exploreFoods{
       flex-direction: column;
   }
-}
+} */
 @media (max-width:700px){
   .row{
       flex-direction: column;
